add swagger for api gateway
